Avoid accidentally pressing the start button on mobile

--- a/client/src/menu/lobby/lobbyMenu.css
+++ b/client/src/menu/lobby/lobbyMenu.css
@@ -7,21 +7,14 @@
 .lm > header {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-}
-
-.lm > header > .leave-button {
-    position: absolute;
-    margin: 0;
-    left: 0.5rem;
-    top: 0.5rem;
+    justify-content: space-between;
 }
 
 .lm > header input{
     background: none;
     border: none;
     width: 0;
-    padding:0;
+    padding: 0;
     margin: 0;
 }
 .lm > header h1{
@@ -29,6 +22,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-grow: 1;
 }
 .lm > header button{
     font-size: 1.5rem;
@@ -44,6 +38,13 @@
 @media only screen and (max-width: 600px) {
     .lm > main {
         flex-direction: column;
+    }
+    .lm > header {
+        flex-direction: column;
+    }
+    .lm > header > :first-child {
+        display: flex;
+        justify-content: space-between;
     }
 }
 .lm > main > div {
